# mini-pipeline

./: .gitignore  README.md  pyproject.toml
src/mini_pipeline/: __init__.py  pipeline.py  task.py
